deployments/deployment-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  namespace: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - name: proxy
        image: localhost:5000/proxy:v1.0
