deployments/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: localhost:32000/frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 6000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: orders
spec:
  ports:
  - port: 6000
    targetPort: 6000
  selector:
    app: backend
